fixed text issue on mobile for most screens. also fixed footer

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,18 +1,25 @@
 .footer {
     display: flex;
     width: 100%;
-    height: 40px;
+    height: 35px;
     bottom: 0px;
+    margin-top: 1%;
     position: fixed;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     background-color: #f7dddc;
 }
 .footer a {
     font-size: 30px;
-    margin-right: 30px;
+    margin-right: 20px;
     color: #9898bc;
 }
 i:hover {
     color: #865472;
+}
+/* Mobile styling */
+@media screen and (max-width: 539px){
+    body {
+        padding-bottom: 5%;
+    }
 }
